--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+.app{
+  text-align: center;
+}
+
 table{
-  width: 400px
+  width: 400px;
+  margin: auto;
 }
 
 td {
@@ -9,4 +14,5 @@ td {
 
 button {
   margin-top: 5px;
+  box-shadow: 3px 5px #8888;
 }
